[package]
name = "ycbust"
version = "0.2.0"
edition = "2021"
description = "CLI tool for downloading and extracting the YCB Object and Model Set for 3D rendering and simulation"
license = "MIT"
repository = "https://github.com/killerapp/ycbust"
homepage = "https://github.com/killerapp/ycbust"
readme = "README.md"
keywords = ["ycb", "dataset", "3d", "robotics", "simulation"]
categories = ["command-line-utilities", "science::robotics"]
exclude = [".github", "target"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
