[package]
name = "ycbust"
version = "0.3.0"
edition = "2021"
description = "Library and CLI tool for downloading and extracting the YCB Object and Model Set for 3D rendering and simulation"
license = "Apache-2.0"
repository = "https://github.com/Agentic-Insights/ycbust"
homepage = "https://github.com/Agentic-Insights/ycbust"
readme = "README.md"
keywords = ["ycb", "dataset", "3d", "robotics", "simulation"]
categories = ["command-line-utilities", "science::robotics"]
exclude = [".github", "target"]

[features]
default = []
s3 = ["dep:rust-s3", "dep:async-compression", "dep:async-tar", "dep:tokio-util", "dep:pin-project-lite"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
anyhow = "1.0"

# S3 streaming support (optional)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"], optional = true }
async-compression = { version = "0.4", features = ["futures-io", "gzip"], optional = true }
async-tar = { version = "0.5", optional = true }
tokio-util = { version = "0.7", features = ["io", "compat"], optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
